# GER

./: .gitignore  COLAB  Criar pasta  LAYOUT.txt  PROJECT_STATE.md  README.md  Run bootstrap  START S26_desenvolvimento.ipynb  Start motor colab  init  install_ger.py  pyproject.toml  start_ger.py
DOCS/: CHANGELOG.md  CORE_ARCHITECTURE.md  PROJECT_STATE.md  README.md
GER/: VERSION.py
GER_CORE/: S26-B37-8_Ordinal_Geometry.py  S26_B21_modal_transfer.py  S26_B23_beta_dependence.py  S26_B24_1_temporal_refinement.py  S26_B24_2_stability_map.py  S26_B24_3_critical_curve.py  S26_B24_5_extended_curve.py  S26_B25_critical_scaling_refinement.py  S26_B28_crossover_mapping.py  S26_B29_asymptotic_scaling.py  S26_B31_modal_transfer.py  S26_B32_mixing_rate.py  S26_B33_mixing_scaling.py  S26_B34_2_spatial_robustness.py  S26_B34_3_sigma_robustness.py  S26_B34_scaling_robustness.py  S26_B35_persistence_metrics.py  S26_B36_1_classifier_audit.py  S26_B36_2_classifier_robustness.py  S26_B36_geometry_scan.py  S26_B36_operator_audit.py  S26_B36_state_vector.py  S26_B36_stationary_scan.py  S26_B36_stationary_scan2.py  S26_B36_stationary_scan_audit.py  S26_B37_11_signature_space_structure.py  S26_B37_1_metric_sensitivity.py  S26_B37_4_metric_benchmark.py  S26_B37_5_metric_candidates.py  S26_B37_7_distribution_robustness.py  S26_B37_9_real_signature_geometry.py  S27_E1_1_operator_partitions.py  S27_E1_partition_observatory.py  S27_E2_1_partition_lattice.py  S27_E2_2_partition_order.py  S27_E2_3_lattice_consistency_audit.py  S27_E3_1_partition_robustness.py  S27_E3_4_parameter_expansion.py  (+56 more)
(+355 files in other folders)
